infra/network/internet_gateway.tf
resource "aws_internet_gateway" "ig" {
  vpc_id = aws_vpc.vpc.id
  tags   = { Name = "${local.fqn}-ig" }
}
